# mcp-baf-audit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_baf_audit/: __init__.py  events.py  reader.py  redact.py  trace.py  writer.py
tests/: test_events.py  test_reader.py  test_redact.py  test_trace.py  test_writer.py
