[project]
name = "mcp-baf-audit"
version = "0.2.0"
description = "Shared JSONL audit log for BAF MCP services (mcp-baf, baf-write-mcp, hermes)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "andriy4k07" }]
requires-python = ">=3.11"
keywords = ["mcp", "audit", "jsonl", "logging", "1c", "baf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]
# Без рантайм-зависимостей: только стандартная библиотека.
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/andriy4k07/mcp-baf-audit"
Issues = "https://github.com/andriy4k07/mcp-baf-audit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_baf_audit"]